--- a/examples/deno/index.html
+++ b/examples/deno/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>tauri-plugin-cookie-fetch example</title>
-  <script type="module" src="./src/index.tsx"></script>
+  <link rel="stylesheet" href="./src/index.css" data-esbuilder-bundle>
+  <script type="module" src="./src/index.tsx" data-esbuilder-bundle></script>
 </head>
 
 <body>
